2002-10-08  Kristian Rietveld  <kris@gtk.org>

	(So Miguel told me just to go ahead and commit -kris)

	* gtk/TreeSelection.custom: new file, defines a working
	GetSelected method (GetSelected is a bit tricky function).

	* generator/InterfaceGen.cs (Generate): also call AppendCustom

	* sources/Gtk.metadata: hide the autogenerated
	Gtk.TreeSelection.GetSelected method.

2002-10-08  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Point.custom: Use (x,y) instead.
	
	* gdk/Color.custom: Use the X rgb color format specification.

	* gdk/Rectangle.custom: Use the X geometry format for Rectangles.

2002-10-07  Vladimir Vukicevic  <vladimir@pobox.com>

	* glue/style.c, gtk/Style.custom: handle
	getting GC's and colors correctly -- it's not possible
	to marshal arrays from C-land to mono correctly,
	so indexed accessors have to be used.

2002-10-08  Duncan Mak  <duncan@ximian.com>

	* gdk/Color.custom:
	* gdk/DeviceAxis.custom:
	* gdk/Point.custom:
	* gdk/Rectangle.custom: Committed ToString patches contributed by
	Jasper van Putten <Jaspervp@gmx.net>

2002-10-05  Vladimir Vukicevic  <vladimir@pobox.com>

	* glib/GException.cs: g_clear_error takes
	a GError **, not a GError *.  Added refs to get the **.

2002-10-04  Vladimir Vukicevic  <vladimir@pobox.com>

	* glib/ObjectManager.cs, glue/type.c: If there isn't
	an exact match for a C GObject class (i.e. BluecurveStyle),
	walk up the gobject type hierarchy until we find a type
	that we do have a wrapper for, and return that.  This means
	that you'll always, worst-case, end up with a GObject.

	* glib/Value.cs, glue/value.c: Added default constructor
	to GLib.Value() that creates a new value with a type of
	INVALID, and changed the glue function to not call
	gtk_type_init if INVALID is passed.

2002-10-02  Vladimir Vukicevic  <vladimir@pobox.com>

	* gtk/TreeView.custom: added TreeView Handle as argument
	to set_model in Model property

2002-09-29  Rachel Hestilow  <hestilow@ximian.com>
