@@ -17,3 +17,44 @@ public void SetBounds (double lower, double upper, double step_increment, double
 	gtksharp_gtk_adjustment_set_bounds (this.Handle, lower, upper, step_increment, page_increment, page_size);
 }
 
+[DllImport ("gtksharpglue")]
+static extern double gtksharp_gtk_adjustment_get_lower (IntPtr i);
+
+public double Lower {
+	get {
+		return gtksharp_gtk_adjustment_get_lower (this.Handle);
+	}
+}
+
+[DllImport ("gtksharpglue")]
+static extern double gtksharp_gtk_adjustment_get_upper (IntPtr i);
+public double Upper {
+	get {
+		return gtksharp_gtk_adjustment_get_upper (this.Handle);
+	}
+}
+
+[DllImport ("gtksharpglue")]
+static extern double gtksharp_gtk_adjustment_get_step_increment (IntPtr i);
+public double StepIncrement {
+	get {
+		return gtksharp_gtk_adjustment_get_step_increment (this.Handle);
+	}
+}
+
+[DllImport ("gtksharpglue")]
+static extern double gtksharp_gtk_adjustment_get_page_increment (IntPtr i);
+public double PageIncrement {
+	get {
+		return gtksharp_gtk_adjustment_get_page_increment (this.Handle);
+	}
+}
+
+[DllImport ("gtksharpglue")]
+static extern double gtksharp_gtk_adjustment_get_page_size (IntPtr i);
+public double PageSize {
+	get {
+		return gtksharp_gtk_adjustment_get_page_size (this.Handle);
+	}
+}
+
