@@ -1,3 +1,10 @@
+2002-10-09  Miguel de Icaza  <miguel@ximian.com>
+
+	* glue/adjustment.c (gtksharp_gtk_adjustment_get_page_size): Added
+	the glue.
+
+	* gtk/Adjustment.custom: Added some more methods
+
 2002-10-08  Kristian Rietveld  <kris@gtk.org>
 
 	(So Miguel told me just to go ahead and commit -kris)
